# pudim

./: init.lua
fnl/: bootstrap.fnl  plugins.fnl
fnl/config/: completion.fnl  debug.fnl  editor.fnl  formatting.fnl  icons.fnl  lsp.fnl  scroll.fnl  tab.fnl  terminal.fnl  theming.fnl  tree.fnl  ui.fnl  which-key.fnl
fnl/languages/: rust.fnl  scala.fnl
fnl/themes/: github.fnl
plugin/: packer_compiled.lua
pudim/: Cargo.toml  build.sh
pudim/src/: lib.rs
