[package]
edition = "2021"
name = "pudim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = "0.1"

[target.x86_64-apple-darwin]
rustflags = [
  "-C",
  "link-arg=-undefined",
  "-C",
  "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C",
  "link-arg=-undefined",
  "-C",
  "link-arg=dynamic_lookup",
]
